# pacman

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  resources.qrc
assets/: map.tmx  maze.tsx  pacman.tsx
source/: CMakeLists.txt  Entity.cpp  Entity.h  MainView.cpp  MainView.h  Map.cpp  Map.h  Pacman.cpp  Pacman.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  Tile.cpp  Tile.h  TmxMap.cpp  TmxMap.h  TmxMapLoader.cpp  TmxMapLoader.h  TmxObject.cpp  TmxObject.h  TmxObjectLayer.h  TmxTileLayer.cpp  TmxTileLayer.h  TmxTileset.h  TsxTile.cpp  TsxTile.h  TsxTileset.cpp  TsxTileset.h
source/Collision/: CMakeLists.txt  Collider.h  CollisionManifold.h  CollisionObject.h  CollisionPoints.h  CollisionWorld.cpp  CollisionWorld.h  RectangleCollider.cpp  RectangleCollider.h
source/Tiled/: CMakeLIsts.txt  TmxMapLoader.cpp  TmxObject.h  TmxObjectLayer.cpp  TsxTile.cpp  TsxTile.h  TsxTileset.cpp  TsxTileset.h
